# geodesy-math

./: CMakeLists.txt
inc/: complex.h  config.h  constants.h  field.h  mat.h  quaternion.h  type.h  vec.h
inc/geodesy/: math.h
inc/geodesy/math/: config.h  field.h  vec.h
inc/math/: complex.h  constants.h  mat.h  quaternion.h  type.h
