# cmake_minimum_required(VERSION 3.20)

# set(CMAKE_CXX_STANDARD 17)
# set(CMAKE_CXX_STANDARD_REQUIRED ON)

# set(PROJECT_NAME "geodesy-math")

# file(GLOB_RECURSE INC
#     "inc/*.h"
# )

# file(GLOB_RECURSE SRC
#     "src/*.h"
#     "src/*.cpp"
#     "src/*.c"
# )

# project(${PROJECT_NAME} VERSION 1.0.0 LANGUAGES CXX)

# add_library(${PROJECT_NAME} ${INC} ${SRC})

# # Set Include Directories
# target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc/)
